--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/lalosuarez/spring-cloud-config-demo
+#spring.cloud.config.server.git.uri=https://github.com/lalosuarez/spring-cloud-config-demo
+spring.cloud.config.server.git.uri=${user.home}/spring-config-repo
+#spring.cloud.config.server.encrypt.enabled=false
+spring.cloud.config.server.health.enabled=true
+
+#security.user.username=configserver
+#security.user.password={cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ
+
+#encrypt.keystore.location=${user.home}\\spring-cloud-demo\\server.jks
+#encrypt.keystore.password=letmein
+#encrypt.keystore.alias=mytestkey
+#encrypt.keystore.secret=letmein
