--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8888
-#spring.cloud.config.server.git.uri=https://github.com/lalosuarez/spring-cloud-config-demo
-spring.cloud.config.server.git.uri=${user.home}/spring-config-repo
+spring.cloud.config.server.git.uri=https://github.com/lalosuarez/spring-cloud-config-demo
+#spring.cloud.config.server.git.uri=${user.home}/spring-config-repo
+#spring.cloud.config.server.git.uri=C:/Users/esuarezv/spring-config-repo
 #spring.cloud.config.server.encrypt.enabled=false
 spring.cloud.config.server.health.enabled=true
 
