--- a/reservation-service/pom.xml
+++ b/reservation-service/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>reservation-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>reservation-service</name>
