--- a/reservation-service/src/main/resources/bootstrap.properties
+++ b/reservation-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=reservation-service
 spring.cloud.config.uri=http://localhost:8888
-#management.security.enabled=false
+#spring.cloud.config.uri=http://docker-host:8888
