--- a/reservation-service/src/main/resources/bootstrap.properties
+++ b/reservation-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,16 @@
 spring.application.name=reservation-service
 spring.cloud.config.uri=http://localhost:8888
 #spring.cloud.config.uri=http://docker-host:8888
+
+# In case that the config server is unavialable
+# this app will not run. The thefaut is false.
+spring.cloud.config.failFast=true
+
+# Credentials for config-server auth
+spring.cloud.config.username=configserver
+spring.cloud.config.password=configserver1
+
+# The active profile for this app, the default is default
+# You could also run the application with
+# -Dspring.profiles.active=northamerica rather than changing the bootstrap file
+spring.profiles.active=default
