--- a/reservation-service/src/main/resources/bootstrap.properties
+++ b/reservation-service/src/main/resources/bootstrap.properties
@@ -1,10 +1,11 @@
 spring.application.name=reservation-service
+# Docker
+#spring.cloud.config.uri=http://192.168.99.100:8888
 spring.cloud.config.uri=http://localhost:8888
-#spring.cloud.config.uri=http://docker-host:8888
 
 # In case that the config server is unavialable
 # this app will not run. The thefaut is false.
-spring.cloud.config.failFast=true
+spring.cloud.config.failFast=false
 
 # Credentials for config-server auth
 spring.cloud.config.username=configserver
