adding yml properties

--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-encrypt.key-store.location=file:C:/Users/esuarezv/spring-cloud-demo/server.jks
-encrypt.key-store.password=0123456789abcdef0123456789abcdef
-encrypt.key-store.alias=mytestkey
-encrypt.key-store.secret=0123456789abcdef0123456789abcdef
+#encrypt.key-store.location=file:C:/Users/esuarezv/spring-cloud-demo/server.jks
+#encrypt.key-store.password=0123456789abcdef0123456789abcdef
+#encrypt.key-store.alias=mytestkey
+#encrypt.key-store.secret=0123456789abcdef0123456789abcdef
