--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -1,12 +1,12 @@
-spring.application.name=eureka-service
+#spring.application.name=eureka-service
 # Docker
 #spring.cloud.config.uri=http://192.168.99.100:8888
-spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
 
 # In case that the config server is unavialable
 # this app will not run. The thefaut is false.
-spring.cloud.config.failFast=false
+#spring.cloud.config.failFast=false
 
 # Credentials for config-server auth
-spring.cloud.config.username=configserver
-spring.cloud.config.password=configserver1
+#spring.cloud.config.username=configserver
+#spring.cloud.config.password=configserver1
