--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# Config for default profile (local development)
 server:
   port: 8888
 
@@ -16,6 +17,7 @@ security:
     name: configserver
     password: configserver1
 
+# Config for docker profile (deploying using docker)
 ---
 server:
   port: 8888
