--- a/eureka-server/src/main/docker/Dockerfile
+++ b/eureka-server/src/main/docker/Dockerfile
@@ -2,5 +2,12 @@ FROM java:8
 VOLUME /tmp
 ADD /target/eureka-server-0.0.1.jar app.jar
 RUN sh -c 'touch /app.jar'
-ENV JAVA_OPTS=""
+
+# Sets de profile passed in docker build --build-arg profiles=default
+# to run de app with the desired profile
+ARG profiles="default"
+ENV PROFILES=$profiles
+RUN echo "PROFILES=$PROFILES"
+
+ENV JAVA_OPTS="-Dspring.profiles.active=$PROFILES"
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
