--- a/reservation-service/src/main/resources/bootstrap.yml
+++ b/reservation-service/src/main/resources/bootstrap.yml
@@ -17,6 +17,7 @@ spring:
   cloud:
     config:
       uri: http://192.168.99.100:8888
+      #uri: http://host:8888
       failFast: false
       username: configserver
       password: configserver1
