--- a/auth-service/src/main/resources/bootstrap.properties
+++ b/auth-service/src/main/resources/bootstrap.properties
@@ -1,10 +1,10 @@
-spring.application.name=auth-service
-spring.cloud.config.uri=http://localhost:8888
-
-# In case that the config server is unavialable
-# this app will not run. The thefaut is false.
-spring.cloud.config.failFast=true
-
-# Credentials for config-server auth
-spring.cloud.config.username=configserver
-spring.cloud.config.password=configserver1
+#spring.application.name=auth-service
+#spring.cloud.config.uri=http://localhost:8888
+#
+## In case that the config server is unavialable
+## this app will not run. The thefaut is false.
+#spring.cloud.config.failFast=true
+#
+## Credentials for config-server auth
+#spring.cloud.config.username=configserver
+#spring.cloud.config.password=configserver1
