--- a/config/reservation-client.yml
+++ b/config/reservation-client.yml
@@ -7,10 +7,10 @@ spring:
         output:
           destination: reservations
 
-# security:
-#   oauth2:
-#     resource:
-#       userInfoUri: http://localhost:9191/uaa/user
+security:
+  oauth2:
+    resource:
+      userInfoUri: http://localhost:9191/uaa/user
 
 hystrix:
   command:
